tracearr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracearr-server
  namespace: tracearr
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: tracearr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: tracearr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: tracearr
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: server
          image: ghcr.io/connorgallopo/tracearr:2.6.1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1001
            capabilities:
              drop:
              - ALL
          ports:
            - containerPort: 3000
              name: web
              protocol: TCP
