tracearr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: tracearr
  name: tracearr
  namespace: tracearr
spec:
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: tracearr
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: web
