tracearr/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tracearr
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`tracearr.mandariini.uk`)
      kind: Rule
      services:
        - name: tracearr-server
          namespace: tracearr
          port: 3000
  tls:
    secretName: mandariini-uk-tls
